<resources>
    <string name="app_name" translatable="false">Smart Library</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="book_recommendations">Book Recommendations</string>
    <string name="top_rated">Top Rated</string>
    <string name="ho_chi_minh_city">Ho Chi Minh City</string>
    <string name="complete">Complete</string>
    <string name="schedule">Schedule</string>
    <string name="time_setting">Time Setting</string>
    <string name="repeat">Repeat</string>
    <string name="done">Done</string>
    <string name="time_off">Time off</string>
    <string name="once">Once</string>
    <string name="daily">Daily</string>
    <string name="custom">Custom</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="cancel">Cancel</string>
    <string name="time_off_title">Time Off</string>
    <string name="mode">Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="lamp">Lamp</string>

    //login - sign up
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="email_error">Enter your username</string>
    <string name="first_error">Enter your first name</string>
    <string name="password_error">Enter password</string>
    <string name="password_wrong">Password wrong</string>
    <string name="password_confirm_error">Password mismatch</string>
    <string name="register">Register</string>
    <string name="register_success">Register Successfully!</string>
    <string name="update_success">Update Successfully!</string>
    <string name="change_pass_success">Change Password Successfully!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="exist_username">This username is already taken.</string>
    <string name="exist_email">An account with this email address already exists.</string>
    <string name="invalid_password">Invalid password</string>
    <string name="user_not_found">User not found.</string>


    <string name="guest_user">You must Sign In to use Room</string>
    <string name="settings">Settings</string>
    <string name="update_your_account">Update your account</string>
    <string name="update_your_profile">Update your profile information</string>
    <string name="log_out">Log Out</string>
    <string name="flickering">Flickering</string>
    <string name="change_password">Change Password</string>
    <string name="information">Information</string>
    <string name="change_your_password">Change your password</string>
    <string name="new_password">New Password</string>
    <string name="class_id">Class ID (Student)</string>
    <string name="major">Major</string>
    <string name="email_confirmation">Email Confirmation</string>
    <string name="verification_guide">Enter your verification to complete registration!</string>
    <string name="hint_code">ex: 345678</string>
    <string name="save">Save</string>
    <string name="favorite_empty">Your favorite list is currently empty.</string>
    <string name="top_empty">Top list is currently empty.</string>
    <string name="recommendation_empty">Recommendation list is currently empty.</string>
    <string name="notification">Notification</string>
    <string name="notification_empty">Your notification is empty</string>
    <string name="book_empty">Books is empty</string>
    <string name="details">Details</string>
    <string name="rate_this">Rate this:</string>
    <string name="authors">Authors</string>
    <string name="tag">Tag:</string>
    <string name="bookLb">Book:</string>
    <string name="statusLb">Status:</string>
    <string name="expireLb">Expire At:</string>
    <string name="bookIdLb">Book ID:</string>
    <string name="typeLb">Type:</string>
    <string name="majorLb">Major:</string>
    <string name="authorsLb">Authors:</string>
    <string name="library">Library</string>
    <string name="book">Book</string>
    <string name="textbooks">Textbooks</string>
    <string name="reference_books">Reference Books</string>
    <string name="journal_articles">Journal Articles</string>
    <string name="ddc_lb">DDC:</string>
    <string name="location_lb">Location:</string>
    <string name="languageLb">Language:</string>
    <string name="book_borrowing_registration">Book Borrowing Registration</string>
    <string name="register_book_guide">If you want to receive the book at home, please select the \'Delivery\' option and enter your address. If you wish to pick it up directly at the library, then press \'Done\'.</string>
    <string name="deliveryLb">Delivery:</string>
    <string name="address_hint">Ex: 1 Vo Van Ngan, Thu Duc, TP HCM</string>
    <string name="addressLb">Address:</string>
    <string name="enter_address">Enter address.</string>

    //Book
    <string name="registered">Registered</string>
    <string name="borrowing">Borrowing</string>
    <string name="return_book">Return</string>
    <string name="fullyBorrowed">Fully Borrowed</string>
    <string name="borrow_expired">You must return this book to library!</string>
    <string name="outOfBook">This book has been borrowed already.</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="manage_your_library">Manage your library</string>
    <string name="remind_you_to_read_book">Remind you to read book</string>
    <string name="my_library">My Library</string>
    <string name="manage_library">Manage</string>
    <string name="contact">Contact</string>
    <string name="list_is_empty">List is empty</string>
    <string name="new_contact">New Contact</string>
    <string name="enquiry">Enquiry</string>
    <string name="full_name">Full Name</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="connect_to_solve_problem">Connect Us to solve Your problem</string>
    <string name="adminLb">Admin:</string>
    <string name="userLb">User:</string>
    <string name="text_here">Text here</string>
    <string name="send_enquiry_successfully">Send Enquiry Successfully</string>
    <string name="book_shelf">Book Shelf</string>
    <string name="user_book_empty">Book Shelf list is empty</string>
    <string name="you_borrowed_this_book">You borrowed this book</string>
    <string name="you_registered_this_book">You registered this book</string>
    <string name="out_of_book">All books are currently checked out. Please check back later.</string>
    <string name="borrow">Borrow</string>
    <string name="search_here">Search here ...</string>
    <string name="electrical_electronics">ex: Điện - Điện tử</string>
    <string name="classIdHint">ex: 191191</string>
    <string name="phoneLb">Phone Number:</string>
    <string name="phoneHint">Ex: 0966334455</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="logout">Logout</string>
    <string name="lock_des">Your account has been locked. Please contact support for further assistance.</string>
    <string name="problem_solved">Problem is solved</string>

</resources>