<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_menu_book"
        android:title="@string/library" />
    <item
        android:id="@+id/navigation_my_library"
        android:icon="@drawable/ic_library"
        android:title="@string/manage_library" />
    <item
        android:id="@+id/navigation_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notification" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />

</menu>