<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="15dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_borrowing_registration"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/brown_lv3"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_book_guide"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/etCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/deliveryLb"
            android:textColor="@color/brown_lv2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/checkBox"
            app:layout_constraintBottom_toBottomOf="@id/checkBox"
            />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:buttonTint="@color/main_color"
            app:layout_constraintStart_toEndOf="@id/etCheck"
            app:layout_constraintTop_toBottomOf="@id/tvContent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/checkBox">

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/brown_lv2"
                android:text="@string/addressLb"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/tvAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/enter_address"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginStart="10dp"
                android:textColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/etAddress"
                app:layout_constraintStart_toEndOf="@id/tvAddress"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/cardBackground"
            android:text="@string/done"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consAddress"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
