<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consMon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tvMon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/monday"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/ivMon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consTue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tvTue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tuesday"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/ivTue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consWed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tvWed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wednesday"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/ivWed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consThu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tvThu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/thursday"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/ivThu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consFri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tvFri"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/friday"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/ivFri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consSat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tvSat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/saturday"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/ivSat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consSun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tvSun"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sunday"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/ivSun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnCancel"
            style="@style/cardBackground"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btnDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llChoose" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/cardBackground"
            android:text="@string/done"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toBottomOf="@id/llChoose"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

    <!--    android:background="#E5F1E2"-->
    <!--    android:textColor="#60A34A"-->